--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -82,12 +82,12 @@ theB&Bhub.com
             ajaxRequest.onreadystatechange = function(){
                 if(ajaxRequest.readyState == 4){
                     var ajaxDisplay = document.getElementById('ajaxDiv');
-                        if(ajaxRequest.responseText =="success!"){
+//                        if(ajaxRequest.responseText =="success!"){
 
 
                          //   window.location.href = "http://www.msdn.com";
-                           ajaxDisplay.innerHTML = ajaxRequest.responseText;
-                        }
+                           //ajaxDisplay.innerHTML = ajaxRequest.responseText;
+                        //}
                         ajaxDisplay.innerHTML = ajaxRequest.responseText;
                 }
             };
