--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -88,7 +88,7 @@ theB&Bhub.com
                          //   window.location.href = "http://www.msdn.com";
                            //ajaxDisplay.innerHTML = ajaxRequest.responseText;
                         //}
-                        ajaxDisplay.innerHTML = ajaxRequest.responseText;
+                        ajaxDisplay.innerHTML = ajaxRequest.responseText + "<a href='http://google.com'<Button>HI</Button></a>";
 
                 }
             };
