--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -78,7 +78,7 @@ theB&Bhub.com
 
 
     <!-- The result of the search will be rendered inside this div -->
-    <tr><td> id="result" style="color: #ff0006"></td></tr>
+    <tr><td><p id="result" style="color: #ff0006"></p>></td></tr>
 </table>
             </form>
 
