--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -54,7 +54,7 @@ theB&Bhub.com
 <main>
 
 
-    <form class="table1" id="myForm" name = 'myForm' action= 'Home.php' method="POST">
+    <form class="table1" id="myForm" name = "myForm" action="http://bbhubapp.azurewebsites.net/Home.php" method="POST">
 <table>
             <tr><td colspan="2">Owner's Page</td></tr>
 
