--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -15,6 +15,15 @@
     <div class="right">
         theB&Bhub.com
     </div>
+    <?php
+    if ($_SESSION["user"] != null) {
+        echo "<p id='loginText'>Currently signed in as: " . $_SESSION["user"];
+    echo "    not you?</p><button id='logout()' onclick='logout()'>LOGOUT</button>";
+    }else{
+    echo "<p id='loginText'>currently not logged in";
+    }
+
+    ?>
 </header>
 
 <div class="nav">
